<resources>
    <string name="app_name">Calorie Calculator</string>

    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="al">Activity Level</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="con">CONVERT</string>
    <string name="display1">Click Convert to continue…</string>

    <string name="loading">Loading…</string>
    <string name="author">By \n Subhadeep Chakraborty</string>
</resources>