<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="414dp"
        android:layout_height="351dp"
        android:layout_marginTop="68dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/age_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/age_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/height_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/height_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weight_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/weight_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gender_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/gender_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/waist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/waist"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/waist_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/neck_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/neck"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/neck_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/al_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text="@string/al"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/al_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="9"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comic_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/con"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/display"
        android:layout_width="275dp"
        android:layout_height="73dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:fontFamily="@font/comic_bold"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/display1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>